fix chat widget on mobile view

--- a/assets/css/chatwidget.css
+++ b/assets/css/chatwidget.css
@@ -64,15 +64,17 @@ p,
   right: 10px;
   bottom: 5px;
   border: 1px;
+  z-index: 999;
 }
 /* Responsive design rules for devices with width less than or equal to 767px */
 @media screen and (max-device-width: 767px) {
   .bpw-layout {
     width: 100% !important;
-    height: 100%;
+    height: 92%;
     right: 0;
     bottom: 0;
     border-radius: 0;
+    z-index: 999;
   }
 }
 
